# MarkDownViewer

./: Cargo.toml  README.md
.github/workflows/: release.yml
packaging/linux/: mdview.desktop  mdview.xml
packaging/linux/deb-scripts/: postinst
src/: app.rs  highlight.rs  images.rs  lib.rs  links.rs  main.rs  navigation.rs  parser.rs  renderer.rs  theme.rs  watcher.rs
tests/: integration_test.rs  other.md  sample.md  sample.py
